Making Endpoints in when creating the objects. This will have to be reviewed and improved